# jiramator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  jiramator-plan.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/specs/: 2026-04-22-bulk-create-unified-architecture.md  README.md
configs/org/: marketaxess.yaml
configs/org.example/: example.yaml  marketaxess.yaml
docs/: create-issues-spec.md  mcp-server-proposal.md
jiramator/: __init__.py  cli.py  config.py  config_merge.py  encoding.py  error_format.py  field_resolver.py  importer.py  jira_client.py  payload_validator.py  planner.py  run_report.py  spreadsheet.py  ticket_builder.py  updater.py  value_coercion.py  wizard.py  yaml_loader.py
scripts/: dry_run.py
tests/: conftest.py  test_cli.py  test_cli_e2e.py  test_config.py  test_config_inheritance_integration.py  test_config_loader_errors.py  test_config_merge.py  test_encoding.py  test_error_format.py  test_field_resolver.py  test_import_cli.py  test_import_integration.py  test_importer.py  test_importer_report.py  test_integration.py  test_jira_client.py  test_payload_validator.py  test_planner.py  test_planner_report.py  test_planner_sprint.py  test_run_report.py  test_spreadsheet.py  test_ticket_builder.py  test_ticket_builder_strip_lines.py  test_updater.py  test_value_coercion.py  test_wizard.py  test_yaml_loader.py
(+21 files in other folders)
